<resources>
    <string name="app_name">Balance Health</string>
    <string name="scanButton">Scan</string>
    <string name="scanStopButton">Stop Scan</string>
    <string name="accButton">Acc</string>
    <string name="scan">Scan</string>
    <string name="stop_scan">Stop Scan</string>
    <string name="balanceEx1_button">Balance Exercise One</string>

    <string name="x">x : </string>
    <string name="y">y : </string>
    <string name="z">z : </string>
    <string name="HR">Heart Rate :  </string>
    <string name="BeatInterval">Beat interval :  </string>

    <string name="test_linear_acceleration">Linear Acceleration</string>
    <string name="progress_report">Progress Report</string>
    <string name="balanceEx1desc">Stand on one leg for 30 seconds</string>
    <string name="setInitialScore">Set Initial Score</string>
    <string name="performExercise">Perform Exercise</string>
    <string name="viewProgressButton">View  Progress</string>
    <string name="balanceExListButton">View Exercise List</string>
    <string name="connectToTextView">Select option to connect to Movesense device :</string>
    <string name="exitButton">Exit</string>

    <!--login-->
    <string name="content_desc">image</string>
    <string name="title_login">LOGIN</string>
    <string name="email_id">Email ID</string>
    <string name="password_id">Password</string>
    <string name="forgot_password_id">Forgot Password?</string>
    <string name="button_label_login">Login</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="register">Register</string>

    <!--register-->
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Condition </u></string>
    <string name="btn_lbl_register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>
    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Password must be at least 6 characters long</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>
    <string name="validation_success">Your details have been successfully registered</string>

    <!--progressBar-->
    <string name="please_wait">Please Wait</string>

    <!--forgot password-->
    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_title_description">Enter your username and e-mail address we\'ll send you a email to reset your password</string>
    <string name="btn_lbl_submit">Submit</string>
    <string name="register_success">Registration successful</string>
    <string name="click_again_to_exit">Please click again to exit</string>

    <string name="location_permission_denied">You have denied location permission needed. You can allow it from mobile settings.</string>
    <string name="connected_to_movesense_device">Connected to Movesense Device</string>
    <string name="bluetooth_disabled">Bluetooth is turned off. Please turn on to connect to device</string>
    <string name="connection_error">Connection Error:</string>
    <string name="exercise_description">Exercise Description</string>
    <string name="data_x">Data x</string>
    <string name="heart_rate_bpm">Heart rate: %.0f [bpm]</string>
    <string name="balnce_results_uploaded_successfully">Balance  results were uploaded successfully to the database.</string>
    <string name="retrieved_progress_results">Successfully retrieved progress data from database</string>
    <string name="no_data_found">Database has no results stored for this exercise</string>
    <string name="no_activities_set">No activities have been set</string>
    <string name="doctors_email_id">Doctors Email address</string>
    <string name="begin_activity">Begin Activity</string>
    <string name="activity_description">Activity Description</string>
    <string name="describe_activities">Directions \n\n- There are four standing positions that get progressively harder to maintain.\n
        1. Stand with your feet side-by-side  \n
        2.Place the instep of one foot so it is touching the big toe of the other foot.  \n
        3.Tandem stance Place one foot in front of the other, heel touching toes  \n
        4. Stand on one foot.\n
        The patient can get help them assume the correct position. When the patient is steady, let go, and time how long they can maintain the position,
        but remain ready to assist the patient if they should lose their balance.
        If the patient can hold a position for 10 seconds without moving their feet or needing support, go on to the next position.
        If not, STOP the test. Patients should not use an assistive device (cane or walker) and they should keep their eyes open</string>
    <string name="completed_exercises">You have completed the exercises for today!!</string>
    <string name="start_activity">Start Activity</string>
    <string name="begin_next_activity">Select start activity button to begin next activity.</string>
    <string name="activities_completed">You have already completed the activities for today. Please try again tomorrow!!</string>
    <string name="you_completed_an_activity">You have successfully completed the activity.\n
        To begin the next activity please select the start activity button.</string>
    <string name="you_completed_all_activities">You have successfully completed all the activities.\n
        Try again tomorrow. Keep up the good work.</string>
    <string name="you_failed_an_activity">You did not mange too successfully complete the activity.\n
         Try again tomorrow. Keep up the good work.</string>
    <string name="Congratulations">Congratulations</string>
    <string name="Hard_Luck">Hard Luck</string>
    <string name="view_progress">View Progress</string>
    <string name="last_activity_completed">Last Activity taken :</string>
    <string name="number_of_activities_successfully_completed">Activities successfully completed</string>
    <string name="feet_together">Stand with your feet side-by-side : </string>
    <string name="instep">Instep Stance : </string>
    <string name="tandem">Tandem Stance : </string>
    <string name="one_foot">Stand on one foot : </string>
    <string name="unsuccessful_connection">If deice is not connected to within 30 seconds, please restart the application</string>
    <string name="logout">Logout</string>
    <string name="averageScores">Average Movements - last 7 activities</string>
    <string name="registered_successfully">User was registerd successfully</string>

</resources>