<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.BalanceExOneActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/balanceEx1desc"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1.0"
            android:text="@string/balanceEx1desc" />

        <Button
            android:id="@+id/setInitialScore"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1.0"
            android:text="@string/setInitialScore" />

        <Button
            android:id="@+id/performExercise"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1.0"
            android:text="@string/performExercise" />

        <Button
            android:id="@+id/viewProgressButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="200dp"
            android:layout_weight="1.0"
            android:text="@string/viewProgressButton" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>