<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="6dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/x_axis_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/x"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/y_axis_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/y"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/z_axis_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/z"
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="493dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="3">


        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/linearAcc_lineChart"
            android:layout_width="match_parent"
            android:layout_height="540dp" />

    </LinearLayout>

    <Button
        android:id="@+id/exitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="exitButtonClicked"
        android:text="@string/exitButton" />
</LinearLayout>
